crates/fundle_macros/src/snapshots/fundle_macros__newtype__tests__basic_expansion.snap
---
source: crates/fundle_macros/src/newtype.rs
expression: expand_fundle_newtype!(item)
---
#[derive(::std::clone::Clone)]
#[allow(dead_code)]
struct Foo(String);
impl<T> ::std::convert::From<T> for Foo
where
    T: ::std::convert::AsRef<String>,
    String: ::std::clone::Clone,
{
    fn from(x: T) -> Self {
        Self(x.as_ref().clone())
    }
}
impl ::std::ops::Deref for Foo {
    type Target = String;
    fn deref(&self) -> &Self::Target {
        &self.0
    }
}
impl ::std::ops::DerefMut for Foo {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.0
    }
}
