crates/fundle_macros/src/snapshots/fundle_macros__newtype__tests__multi_field_named.snap
---
source: crates/fundle_macros/src/newtype.rs
expression: expand_fundle_newtype!(item)
---
::core::compile_error! {
    "fundle::newtype can only be applied to tuple structs with exactly one field"
}
