crates/fundle_macros/src/snapshots/fundle_macros__newtype__tests__union.snap
---
source: crates/fundle_macros/src/newtype.rs
expression: expand_fundle_newtype!(item)
---
::core::compile_error! {
    "expected `struct`"
}
